# quake-modoki

./: AGENTS.md  Cargo.toml  README.md
src/: main.rs  tray.rs
