[package]
name = "quake-modoki"
version = "0.3.0"
edition = "2024"
authors = ["oshiteku"]
description = "Quake Modoki - Make every window act like Quake Mode"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oshiteku/quake-modoki"
homepage = "https://github.com/oshiteku/quake-modoki"
readme = "README.md"
keywords = ["windows", "hotkey", "window-manager"]
categories = ["command-line-utilities"]
exclude = [
    ".claude/",
    ".github/",
    ".pre-commit-config.yaml",
    "CLAUDE.md",
    "AGENTS.md",
    "assets/icon.png",
    "assets/demo.gif",
]

[dependencies]
anyhow = "1.0.100"
global-hotkey = "0.7.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
notify-rust = "4"
tray-icon = "0.21"
muda = "0.17"
winreg = "0.55"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_System_Console"] }
serde = { version = "1.0", features = ["derive"] }
confy = "2.0"

[dev-dependencies]
serial_test = "3"

[build-dependencies]
tauri-winres = "0.3.5"
